create post quote endpoint
