# internal/models/ratings.go
@@ -1,0 +1,59 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Ratings ratings
+//
+// swagger:model Ratings
+type Ratings struct {
+
+	// quote count
+	QuoteCount int64 `json:"quote_count,omitempty" gorm:"type:int(255);default:0"`
+
+	// rating id
+	RatingID int64 `json:"rating_id,omitempty" gorm:"type:int primary key auto_increment"`
+
+	// user id
+	UserID int64 `json:"user_id,omitempty" gorm:"foreignKey:UserID;references:UserID"`
+
+	// user rating
+	UserRating float64 `json:"user_rating,omitempty" gorm:"type:float;default:0.0"`
+}
+
+// Validate validates this ratings
+func (m *Ratings) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this ratings based on context it is used
+func (m *Ratings) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Ratings) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Ratings) UnmarshalBinary(b []byte) error {
+	var res Ratings
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
